--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
 <body>
 
     <p>This is a paragraph element</p>
-    <script>
-        $.get('http://localhost:3000/james').then(response => console.log('response: ' + response));
-    </script>
+   
     </section>
     <section class="book-list container">
         <h3>My Books</h3>
@@ -31,6 +29,7 @@
     <script src="./scripts/models/book.js" type="text/javascript"></script>
     <script>
         $.get('http://localhost:3000/ping').then(response => console.log(response));
+        $.get('http://127.0.0.1:8080/ping').then(response => console.log(response));
     </script>
 </body>
 </html>
